--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "delhi-business-suite",
-  "version": "1.0.0",
+  "name": "delhi-business-intelligence-suite",
+  "version": "2.0.0",
+  "description": "Unified business intelligence and maps analysis platform",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
@@ -22,5 +23,9 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.8"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
